# fluidsynth-android-hello-world

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/fluidsynthandroidhelloworld/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fluidsynth_wrapper.c  native-lib.cpp
app/src/main/cpp/fluidsynth/include/fluidsynth/: version.h
app/src/main/java/com/example/fluidsynthandroidhelloworld/: Fluidsynth.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/fluidsynthandroidhelloworld/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
